--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: LMC的博客 | Hux Blog
 header-img: img/home-bg.jpg
 email: chen.cc.miao@qq.com
 description: "这里是 @LMC 的个人博客，与你一起发现更大的世界!"
-keyword: "UP主 SYSTEM-LMC"
+keyword: "SYSTEM-LMC UP主"
 url: "https://huangxuan.me" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
