--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Hux Blog
-SEOTitle: LMC的博客 | Hux Blog
+title: LMC Blog
+SEOTitle: LMC的博客 | LMC Blog
 header-img: img/home-bg.jpg
 email: chen.cc.miao@qq.com
 description: "这里是 @LMC 的个人博客，与你一起发现更大的世界!"
