--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username: huxpro
-zhihu_username: huxpro
-github_username: huxpro
-twitter_username: huxpro
-#facebook_username:  huxpro
+weibo_username: SYSTEM-LMC
+zhihu_username: SYSTEM-LMC
+github_username: SYSTEM-LMC
+twitter_username: SYSTEM-LMC
+#facebook_username:  SYSTEM-LMC
 #linkedin_username:  firstname-lastname-idxxxx
 
 # Build settings
@@ -75,7 +75,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "要做一个有理想的人！ <br> LMC"
-sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: https://github.com/SYSTEM-LMC.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
