--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: LMC Blog
+title: LMC 博客
 SEOTitle: LMC的博客 | LMC Blog
 header-img: img/home-bg.jpg
 email: chen.cc.miao@qq.com
@@ -59,7 +59,7 @@ kramdown:
       start_line: 1
 
 # Disqus settings
-disqus_username: hux
+disqus_username: LMC
 
 # Netease settings
 netease_comment: false
@@ -70,7 +70,7 @@ netease_comment: false
 
 # Google Analytics
 ga_track_id: "UA-49627206-1" # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+ga_domain: system-lmc.github.io
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
